# termbuffer

./: Cargo.toml  README.md
examples/: simple.rs  tester.rs
src/: lib.rs  screen.rs
